# pycc

./: .gitignore  README.CN.md  README.md  agent.py  compaction.py  config.py  context.py  plan_mode.py  providers.py  pycc.py  pyproject.toml  tool_registry.py  tools.py
eval/: README.md  batch_eval.py  run_instance.py  score.py
hooks/: __init__.py  dispatcher.py  executor.py  loader.py  types.py
mcp/: __init__.py  config.py  types.py
memory/: __init__.py  auto_extractor.py  context.py  dream.py  retriever.py  store.py  tools.py
multi_agent/: __init__.py  subagent.py  tools.py
security/: __init__.py  bash_analyzer.py
skill/: builtin.py  executor.py  loader.py
source/: codebase.md  plan.md  rerwrite.md
task/: __init__.py  store.py  tools.py  types.py
tests/: e2e_commands.py  e2e_compact.py  e2e_plan_mode.py  e2e_plan_tools.py  test_compaction.py  test_diff_view.py  test_memory.py  test_skills.py  test_task.py  test_tool_registry.py
