[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycc"
version = "3.05.6"
description = "pycc: A lightweight, hackable Python AI coding assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
vision = ["Pillow"]
dev    = ["pytest>=7.0"]

[project.scripts]
pycc = "pycc:main"

[tool.setuptools]
py-modules = [
    "pycc",
    "agent",
    "compaction",
    "config",
    "context",
    "providers",
    "tool_registry",
    "tools",
]
packages = ["hooks", "mcp", "memory", "multi_agent", "security", "skill", "task"]
